# docs/swagger.json
@@ -93,7 +93,7 @@
                 }
             }
         },
-        "/api/article/{id}/status": {
+        "/api/article/{uuid}/status": {
             "put": {
                 "description": "更新文章状态",
                 "tags": [
@@ -252,6 +252,17 @@
                     "用户"
                 ],
                 "summary": "添加用户",
+                "parameters": [
+                    {
+                        "description": "用户信息",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "成功",
@@ -308,6 +319,37 @@
                             "items": {
                                 "$ref": "#/definitions/model.UserResponse"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/login": {
+            "post": {
+                "description": "登录",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "description": "用户信息",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.Response"
                         }
                     }
                 }
@@ -389,6 +431,9 @@
                 },
                 "message": {
                     "description": "提示信息",
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 }
             }
